--- a/views/footer.jade
+++ b/views/footer.jade
@@ -1,3 +1,15 @@
 footer
-  span Recipes&nbsp; © &nbsp;
-  a(href="#") Design by Tete1805
+  span Recipes © - Design by Tete1805 - Powered by
+  a(href='https://nodejs.org/') NodeJs
+  span thanks to
+  a(href="http://heroku.com") Heroku
+  span / 
+  a(href="https://www.mongodb.com/") MongoDb
+  span thanks to
+  a(href="http://mlab.com") mLab
+  span / 
+  a(href="http://expressjs.com") Express
+  span / 
+  a(href="http://mongoosejs.com/") Mongoose
+  span / 
+  a(href="http://jade-lang.com") Jade
