responsive desgin for layout

--- a/views/menu.jade
+++ b/views/menu.jade
@@ -1,7 +1,7 @@
 nav
   span.brand-icon
     a(href="/") Recipes
-  span.search-bar
+  div.search-bar
     label(for="search-bar", placeholder="#custard, Strawberry, Fraise, Gourmand...") Search
     input(name="search-bar" type="text")
     input(type="submit", value="GO")
