--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -108,3 +108,52 @@ main {
   padding: 20px;
   padding-top: 80px;
 }
+
+
+@media all and (max-width: 900px) {
+  nav {
+    display: block;
+    height: auto;
+    margin: 0;
+    position: relative;
+  }
+
+  nav > * {
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding: 0;
+  }
+
+  nav > .menu {
+    display: block;
+  }
+
+  nav > .menu > li {
+    display: block;
+    float: none;
+    padding: 0;
+  }
+
+  nav > .menu > li:hover ul {
+    display: block;
+    position: relative;
+    top: 100%;
+    left: 0;
+    padding: 0;
+    width: 100%;
+  }
+
+  html, body, main, footer {
+    margin: 0;
+    padding: 0;
+  }
+
+  footer {
+    margin: 0;
+    position: relative !important;
+  }
+
+  .search-bar {
+    display: block;
+  }
+}
