authentication required for pages new and my

--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -4,16 +4,20 @@ block content
 
   h1 Bienvenue #{ user.local.pseudo }
 
+  div 
+    b Mon profil
   div Login
   div Email
   div Mon avatar
   hr
-  div Mon activité
+  div 
+    b Mon activité
   div Nombre de recettes postées
   div Nombre de recettes suivies
   div Nombre d'arômes dans ma besace
   hr
-  div Mon statut dans la communauté
+  div
+    b Mon statut dans la communauté
   div Nombre de followers
   div Likes reçus
   div Dislikes reçus
