--- a/views/aromes/new.jade
+++ b/views/aromes/new.jade
@@ -1,6 +1,6 @@
-extends ../layout
+extends ../site/layout
 block extend_head
-  script(src="../javascripts/app/aromes/new.js")
+  script(src="../javascripts/aromes-new.js")
 block content
 
   h1 #{ title }
