--- a/views/recettes/new.jade
+++ b/views/recettes/new.jade
@@ -1,7 +1,7 @@
-extends ../layout
+extends ../site/layout
 block extend_head
   link(rel='stylesheet', href='/stylesheets/recette-new.css')
-  script(src="../javascripts/app/recettes/new.js")
+  script(src="../javascripts/recettes-new.js")
 block content
 
 
