--- a/views/users/signup.jade
+++ b/views/users/signup.jade
@@ -1,4 +1,4 @@
-extends ../layout
+extends ../site/layout
 block extend_head
   link(rel='stylesheet', href='/stylesheets/login.css')
 block content
