--- a/public/stylesheets/recette-new.css
+++ b/public/stylesheets/recette-new.css
@@ -45,18 +45,26 @@
 
 .recette-button {
   display: inline-block;
-  font-size: 1.5em;
+  margin-right: 4px;
+  padding: 4px 8px;
   position: relative;
+  font-size: 25px;
   width: 100%;
 }
 
 .recette-button > a > i {
   background: transparent 0 0 no-repeat;
   display: inline-block;
-  height: 18px;
+  height: 35px;
+  margin: 0 10px;
   position: relative;
-  top: 0;
-  width: 45px;
+  top: 7px;
+  width: 35px;
+}
+
+.recette-button > a > span{
+  display: inline-block;
+  height: 40px;
 }
 
 .recette-button > a > i.edit {
@@ -64,7 +72,7 @@
 }
 
 .recette-button > a > i.fork {
-  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20550%20300  %22%3E%20%3Cg%3E%0A%20%20%3Cellipse%20fill-opacity%3D%220%22%20fill%3D%22%230f0f00%22%20stroke-width%3D%2238.5%22%20cx%3D%2271.181776%22%20cy%3D%22227.830552%22%20id%3D%22svg_1%22%20rx%3D%2250.499971%22%20ry%3D%2250.499971%22%20stroke%3D%22%23fff%22%2F%3E%0A%20%20%3Cpath%20fill-opacity%3D%220%22%20fill%3D%22%230f0f00%22%20stroke-width%3D%2238.5%22%20d%3D%22m125.661949%2C232.574267c34.830131%2C-2.177326%2062.830825%2C17.418608%2090.148575%2C-64.231118c27.31775%2C-81.649726%2059.416107%2C-92.536356%20124.295763%2C-91.447693%22%20id%3D%22svg_6%22%20stroke%3D%22%23ffffff%22%2F%3E%0A%20%20%3Cline%20stroke%3D%22%23ffffff%22%20fill%3D%22none%22%20stroke-width%3D%2238.5%22%20x1%3D%22122.681752%22%20y1%3D%22234.603283%22%20x2%3D%22419.683086%22%20y2%3D%22234.603283%22%20id%3D%22svg_8%22%20stroke-linejoin%3D%22null%22%20stroke-linecap%3D%22null%22%2F%3E%0A%20%20%3Cellipse%20fill-opacity%3D%220%22%20fill%3D%22%230f0f00%22%20stroke-width%3D%2238.5%22%20cx%3D%22372.911594%22%20cy%3D%2274.83844%22%20id%3D%22svg_11%22%20rx%3D%2250.499971%22%20ry%3D%2250.499971%22%20stroke%3D%22%23fff%22%2F%3E%0A%20%20%3Cellipse%20fill-opacity%3D%220%22%20fill%3D%22%230f0f00%22%20stroke-width%3D%2238.5%22%20cx%3D%22476.950342%22%20cy%3D%22228.410968%22%20id%3D%22svg_12%22%20rx%3D%2250.499971%22%20ry%3D%2250.499971%22%20stroke%3D%22%23fff%22%2F%3E%0A%20%3C%2Fg%3E%3C%2Fsvg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg%20viewBox%3D%220%200%20550%20550%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%3Cg%3E%0A%20%20%3Cg%20id%3D%22svg_2%22%3E%0A%20%20%20%3Cellipse%20stroke%3D%22%23fff%22%20ry%3D%2250.49997%22%20rx%3D%2250.49997%22%20id%3D%22svg_1%22%20cy%3D%22351.24232%22%20cx%3D%2271.18178%22%20stroke-width%3D%2238.5%22%20fill%3D%22%230f0f00%22%20fill-opacity%3D%220%22%2F%3E%0A%20%20%20%3Cpath%20stroke%3D%22%23ffffff%22%20id%3D%22svg_6%22%20d%3D%22m125.66195%2C355.98603c34.83013%2C-2.17733%2062.83082%2C17.4186%2090.14857%2C-64.23112c27.31775%2C-81.64973%2059.41611%2C-92.53636%20124.29577%2C-91.44769%22%20stroke-width%3D%2238.5%22%20fill%3D%22%230f0f00%22%20fill-opacity%3D%220%22%2F%3E%0A%20%20%20%3Cline%20stroke-linecap%3D%22null%22%20stroke-linejoin%3D%22null%22%20id%3D%22svg_8%22%20y2%3D%22358.01505%22%20x2%3D%22419.68309%22%20y1%3D%22358.01505%22%20x1%3D%22122.68175%22%20stroke-width%3D%2238.5%22%20fill%3D%22none%22%20stroke%3D%22%23ffffff%22%2F%3E%0A%20%20%20%3Cellipse%20stroke%3D%22%23fff%22%20ry%3D%2250.49997%22%20rx%3D%2250.49997%22%20id%3D%22svg_11%22%20cy%3D%22198.2502%22%20cx%3D%22372.91159%22%20stroke-width%3D%2238.5%22%20fill%3D%22%230f0f00%22%20fill-opacity%3D%220%22%2F%3E%0A%20%20%20%3Cellipse%20stroke%3D%22%23fff%22%20ry%3D%2250.49997%22%20rx%3D%2250.49997%22%20id%3D%22svg_12%22%20cy%3D%22351.82273%22%20cx%3D%22476.95034%22%20stroke-width%3D%2238.5%22%20fill%3D%22%230f0f00%22%20fill-opacity%3D%220%22%2F%3E%0A%20%20%3C%2Fg%3E%0A%20%3C%2Fg%3E%0A%3C%2Fsvg%3E");
 }
 
 .recette-button > a {  
