--- a/views/recettes/edit.jade
+++ b/views/recettes/edit.jade
@@ -7,7 +7,7 @@ block content
 
   h1 #{ title }
 
-  form.recette(method="POST")
+  form.recette(method="POST", action="/recettes/edit/" + recette._id)
 
     input(name="edit", type="hidden", value="false")
     input(name="_id", type="hidden", value=recette._id || null)
