--- a/views/recettes/new.jade
+++ b/views/recettes/new.jade
@@ -7,7 +7,7 @@ block content
 
   h1 #{ title }
 
-  form.recette(method="POST", action="/recettes/new")
+  form.recette(method="POST")
 
     div
       .title.center
