added edit button on recette/detail

--- a/views/aromes/new.jade
+++ b/views/aromes/new.jade
@@ -1,6 +1,6 @@
 extends ../site/layout
 block extend_head
-  script(src="../javascripts/aromes-new.js")
+  script(src="../javascripts/arome-new.js")
 block content
 
   h1 #{ title }
