--- a/public/stylesheets/recettes.css
+++ b/public/stylesheets/recettes.css
@@ -4,18 +4,16 @@
 }
 
 .recettes > li {
-  border-radius: 5px;
   background: white;
   display: inline-block;
   list-style: none;
   margin: 10px;
   padding: 4px;
-  box-shadow: 1px 2px 4px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.2)
 }
 
 .recette-container {
   background-color: white;
-  border-radius: 5px;
   height: 100%;
   min-width: 300px;
   padding: 15px;
