--- a/views/site/footer.jade
+++ b/views/site/footer.jade
@@ -1,15 +1,15 @@
 footer
   span Recipes © - Design by Tete1805 - Powered by
-  a(href='https://nodejs.org/') NodeJs
+  a(target="_blank" href='https://nodejs.org/') NodeJs
   span thanks to
-  a(href="http://heroku.com") Heroku
+  a(target="_blank" href="http://heroku.com") Heroku
   span / 
-  a(href="https://www.mongodb.com/") MongoDb
+  a(target="_blank" href="https://www.mongodb.com/") MongoDb
   span thanks to
-  a(href="http://mlab.com") mLab
+  a(target="_blank" href="http://mlab.com") mLab
   span / 
-  a(href="http://expressjs.com") Express
+  a(target="_blank" href="http://expressjs.com") Express
   span / 
-  a(href="http://mongoosejs.com/") Mongoose
+  a(target="_blank" href="http://mongoosejs.com/") Mongoose
   span / 
-  a(href="http://jade-lang.com") Jade
+  a(target="_blank" href="http://jade-lang.com") Jade
