--- a/public/stylesheets/recettes.css
+++ b/public/stylesheets/recettes.css
@@ -7,16 +7,23 @@
   background: white;
   display: inline-block;
   list-style: none;
-  margin: 10px;
+  margin-bottom: 20px;
+  margin-right: 20px;
   padding: 4px;
   box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.2)
 }
 
 .recette-container {
   background-color: white;
+  border-left: 2px dashed #ccc;
   height: 100%;
-  min-width: 300px;
-  padding: 15px;
+  margin: 25px 35px 25px 20px;
+  min-width: 400px;
+  padding-left: 25px;
+}
+
+.recette-container > title {
+  font-size: 1.1 em;
 }
 
 .tags {
