--- a/views/recettes/detail.jade
+++ b/views/recettes/detail.jade
@@ -4,89 +4,48 @@ block extend_head
   script(src="../../javascripts/recette-new.js")    
 block content
 
-  h1 #{ title }
-
-  form.recette(method="POST")
-
-    div
-      .title.center
-        b Infos
-      ul
-        li
-          .col-10
-            label Nom de la recette
-          .col-90
-            span= recette.nom
-        li
-          .col-10
-            label Maturation
-          .col-90
-            span= recette.maturation
-        li
-          .col-10
-            label Notes
-          .col-90
-            span= recette.notes
-        li
-          .col-10
-            label Tags
-          .col-90
-            span= recette.hashtags.join(' ')
-    br
-    div
-      .title.center
-        b Bases
-      ul.recette-bases
-        for base in recette.bases.length ? recette.bases : [{}]
-          li
-            .col-10
-              label Base 1
-            .col-90.arome-container
-              .col-10.padded-right
-                span.short-label Ratio PG / VG
-              .col-10
-                span= base.ratio
-              .col-10.padded-right
-                span.short-label Taux de Nicotine
-              .col-10
-                span= base.nicotine
-              .col-10
-                span mg
-              .col-10
-                span= base.pourcentage
-              .col-10
-                span %
-              .col-30 &nbsp;
-
-    br
-    div
-      .title.center
-        b Arômes
-      ul.recette-aromes
-        each arome in recette.aromes.length ? recette.aromes : [{}]
-          li
-            .col-10
-              label Arôme 1
-            .col-90.arome-container
-              .col-20.padded-right
-                span= arome.marque
-              .col-30.padded-right
-                span= arome.nom
-              .col-10
-                span= arome.pourcentage
-              .col-10
-                span %
-              .col-30
-                .col-50.padded-right &nbsp;
-    br
-    div
-      if (user && user._id.toString() == recette.auteur.toString())
+  .col-80
+    h1= recette.nom
+  .col-20
+    div.right
+      if (user && user._id.toString() === recette.auteur._id.toString())
         .recette-button
           a(href='/recette/' + recette._id + '/edit')
             i.edit
-            span Modifier
       else
         .recette-button
           a(href='/recette/' + recette._id + '/fork')
             i.fork
-            span Fork
+
+  em= 'postée par ' + recette.auteur.local.pseudo + ' le ' + recette.ajoute.toISOString().substr(0, 10)
+
+  form.recette(method="POST")
+    div
+      h2 Informations
+    ul.recette-informations
+      li
+        b Maturation recommandée : 
+        span #{ recette.maturation } jours
+      li
+        b Tags :
+        each tag in recette.hashtags
+          a(href="/recettes/search/hashtags/" + tag.substr(1))= tag
+          span &nbsp;
+      li
+        b Notes : 
+        span #{ recette.notes }
+
+    div
+      h2 Ingrédients
+
+    div
+      h3 Bases :
+      ul
+        for base in recette.bases.length ? recette.bases : [{}]
+          li #{ base.pourcentage }% de base en #{ base.nicotine }mg de nicotine avec un ratio PG/VG de #{ base.ratio }
+
+    div
+      h3 Arômes :
+      ul
+        for arome in recette.aromes.length ? recette.aromes : [{}]
+          li #{ arome.pourcentage }% de #{ arome.nom } (#{ arome.marque })
