--- a/views/site/index.jade
+++ b/views/site/index.jade
@@ -9,13 +9,14 @@ block content
 
   h1.center Bienvenue sur Recipes
 
-  p.center Le site pour stocker vos recettes de D.I.Y.
-
-  p.center  Enregistrez vos propres recettes et choisissez de les partager avec le reste de la communauté !
-
-  p.center  Forkez les recettes des autres membres dans votre profil pour en faire vos propores versions.
-
-  p.center  Marquez les arômes que vous possédez et regardez quelles recettes y sont associées.
+  p.center
+    | Le site pour stocker vos recettes de D.I.Y.
+  p.center
+    | Enregistrez vos propres recettes et choisissez de les partager avec le reste de la communauté !
+    br
+    | Forkez les recettes des autres membres dans votre profil pour en faire vos propres versions.
+    br
+    | Marquez les arômes que vous possédez et découvrez quelles recettes y sont associées.
 
   p.center 
     a.login(href='/users/signup') S'enregistrer
