--- a/views/site/layout.jade
+++ b/views/site/layout.jade
@@ -2,7 +2,8 @@ doctype html
 html
   head
     title= title
-    link(href='https://fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic' rel='stylesheet')
+    link(href='https://fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic' rel='stylesheet')      
+    link(href='https://fonts.googleapis.com/css?family=Grand+Hotel|Handlee|Kalam|Tillana', rel='stylesheet')
     link(rel='stylesheet', href='/stylesheets/layout.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     meta(name="viewport", content="width=device-width, initial-scale=1.0, shrink-to-fit=no")
