--- a/public/stylesheets/recettes.css
+++ b/public/stylesheets/recettes.css
@@ -1,5 +1,6 @@
 .recettes {
   display: inline-block;
+  margin-top: 0;
   padding: 0;
 }
 
@@ -10,7 +11,7 @@
   margin-bottom: 20px;
   margin-right: 20px;
   padding: 4px;
-  box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.2)
+  box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.3)
 }
 
 .recette-container {
