--- a/views/site/menu.jade
+++ b/views/site/menu.jade
@@ -15,15 +15,15 @@ nav
             a(href='/recette/new/edit') Nouvelle recette
           li
             a(href='/recettes/my') Mes recettes
-    //- li
-    //-   span Arômes
-    //-     ul
-    //-       li
-    //-         a(href="/aromes/all") Tous les arômes
-    //-       li
-    //-         a(href="/aromes/new") Nouvel arôme
-    //-       li
-    //-         a(href="/aromes/my") Mes arômes
+    li
+      span Arômes
+        ul
+          li
+            a(href="/aromes/all") Tous les arômes
+          li
+            a(href="/aromes/new") Nouvel arôme
+          li
+            a(href="/aromes/my") Mes arômes
     //- li
     //-   span Groupes
     //-     ul
