--- a/views/aromes/new.jade
+++ b/views/aromes/new.jade
@@ -25,6 +25,6 @@ block content
       //- li
       //-   label.col-10 Description
       //-   input(name="description", type="texte", placeholder="Une courte description de l'arôme")
-
-    input(type="hidden" name="_csrf" value=csrfToken)
-    input(type="submit" value="Enregistrer")
+    .col-30
+      input(type="hidden" name="_csrf" value=csrfToken)
+      input(type="submit" value="Enregistrer")
