--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -150,6 +150,18 @@ input, textarea, select {
   padding: 4px 8px;
 }
 
+.recette input, .recette textarea, .recettte select {
+  border: none;
+  border-bottom: 1px solid #ccc;
+  color: #578;
+  font-family: 'Handlee', cursive;
+  font-size: 19px;
+  font-weight: bold;
+  margin-right: 10px;
+  width: 100%;
+}
+
+
 textarea {
   margin-bottom: -10px;
   margin-top: 5px;
