--- a/views/aromes/new.jade
+++ b/views/aromes/new.jade
@@ -11,7 +11,7 @@ block content
       li
         label.col-10 Marque
         .col-20
-          input(name="marque", type="texte", placeholder="Le fabricant ou la marque (Ex : Capella)")
+          input(name="marque", type="text", placeholder="Le fabricant ou la marque (Ex : Capella)")
         ul.autocomplete(for="marque")
           li Capella
           li TPA / TFA (The Perfumer's Apprentice / The Flavor Apprentice)
@@ -21,7 +21,7 @@ block content
       li
         label.col-10 Nom
         .col-20
-          input(name="nom", type="texte", placeholder="Le nom de l'arôme donné par le fabricant")
+          input(name="nom", type="text", placeholder="Le nom de l'arôme donné par le fabricant")
       //- li
       //-   label.col-10 Description
       //-   input(name="description", type="texte", placeholder="Une courte description de l'arôme")
