--- a/views/recettes/edit.jade
+++ b/views/recettes/edit.jade
@@ -21,7 +21,7 @@ block content
         label
           b.col-20 Tags :
         .col-30.padded-right
-          input(name="hashtags", placeholder="#custard #2diy4", value=recette.hashtags.join(' '))
+          input(name="hashtags", type="text", placeholder="#custard #2diy4", value=recette.hashtags.join(' '))
       li
         label 
           b.col-20 Notes : 
