--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -145,12 +145,7 @@ h1, .h1 {
   margin-top: -8%;
 }
 
-input, textarea, select {
-  font-size: 15px;
-  padding: 4px 8px;
-}
-
-.recette input, .recette textarea, .recettte select {
+input[type="text"], input[type="number"], textarea, select {
   border: none;
   border-bottom: 1px solid #ccc;
   color: #578;
@@ -158,9 +153,9 @@ input, textarea, select {
   font-size: 19px;
   font-weight: bold;
   margin-right: 10px;
+  padding: 4px 8px;
   width: 100%;
 }
-
 
 textarea {
   margin-bottom: -10px;
