--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -48,6 +48,31 @@ nav a {
   margin-left: 20px;
 }
 
+.brand-icon a:hover {
+  animation: giggle 600ms ;
+}
+
+@keyframes giggle {
+  0% {
+    margin-left: 0px;
+  }
+  40% {
+    margin-left: 10px;
+  }
+  60% {
+    margin-left: -10px;
+  }
+  80% {
+    margin-left: 5px;
+  }
+  90% {
+    margin-left: -5px;
+  }
+  100% {
+    margin-left: 0px;
+  }
+}
+
 .search-bar {
   display: flex;
 }
