--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -145,7 +145,7 @@ h1, .h1 {
   margin-top: -8%;
 }
 
-input[type="text"], input[type="number"], textarea, select {
+input[type="text"], input[type="number"], input[type="password"], textarea, select {
   border: none;
   border-bottom: 1px solid #ccc;
   color: #578;
@@ -163,7 +163,7 @@ textarea {
   border-width: 1px;
 }
 
-input[type="text"], input[type="number"], textarea, select, option {
+input[type="text"], input[type="number"], input[type="password"], textarea, select, option {
   border-left: none;
   border-right: none;
   border-top: none;
