--- a/views/recettes/all.jade
+++ b/views/recettes/all.jade
@@ -13,7 +13,7 @@ block content
           br
           span Ajoutée le #{ recette.ajoute.toISOString().substr(0, 10) }
           br
-          span par #{ recette.auteur ? recette.auteur.local.pseudo : '' }
+          span par #{ recette.auteur }
           ul.tags
             each hashtag in recette.hashtags
               li
@@ -28,7 +28,7 @@ block content
                 a(href="https://twitter.com/intent/tweet?text=D%C3%A9couvrez%20la%20recette%20" + recette.nom + "%20:%20"+ recette.shortUrl)
                   i.twitter
                   span Tweet
-              if (user && recette.auteur.toString() !== user.toString())
+              if (user && recette.auteur.toString() !== user.local.pseudo.toString())
                   .recette-icon
                     a(href='/recette/' + recette._id + '/fork')
                       i.fork
