--- a/views/users/signup.jade
+++ b/views/users/signup.jade
@@ -7,18 +7,19 @@ block content
 
     h1 Inscription
 
-    form(method="POST")
-      br
-      label Pseudo
-      br
-      input(name="pseudo")
-      br
-      label Password
-      br
-      input(type="password", name="password")
-      br
-      input(type="submit", value="Signup!")
-      input(type="hidden" name="_csrf" value=csrfToken)
-      br
-      br
-      a(href="/users/login") Déjà enregistré ? Se connecter
+    .col-30
+      form(method="POST")
+        br
+        label Pseudo
+        br
+        input(name="pseudo", type="text")
+        br
+        label Password
+        br
+        input(type="password", name="password")
+        br
+        input(type="submit", value="Signup!")
+        input(type="hidden" name="_csrf" value=csrfToken)
+        br
+        br
+        a(href="/users/login") Déjà enregistré ? Se connecter
